Disable ICBOPT_FAST_POST for ISP 2100. Fixes PR kern/47302. From Matthew Jacob.